style.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    width: 100%;
    font-family: Poppins, sans-serif;
    border-radius: 10px;
    transition: background-color 0.3s, color 0.3s;
}

.light-theme {
    background-color: rgb(245, 245, 245) !important;
    color: black;
}

.dark-theme {
    background-color: rgb(24, 24, 27) !important;
    color: white;
}

.top-bar {
    position: sticky;
    top: 0;
    width: 100%;
    height: 10vh;
    color: #e3e3e3;
    padding: 10px 0px;
    -webkit-backdrop-filter: blur(10px);
    backdrop-filter: blur(10px);
}

.top-bar-button {
    width: 30px;
    height: 30px;
}

#top-bar-button-1 {
    padding: 1px 0px 0px 2px;
}

.logo-img {
    width: 50%;
}

.list {
    list-style: none;
    font-weight: 300;
}

.list-links {
    font-family: Poppins, sans-serif;
    font-size: 1.2rem;
    text-decoration: none;
    color: rgb(151, 151, 151);
    cursor: pointer;
    text-align: center;
    padding: 0.5rem 3rem;
    transition: color 0.3s;
}

.light-theme .list-links:hover {
    color: rgb(45, 45, 45);
}

.light-theme #top-bar-button-1 {
    border-color: black !important;
}

.light-theme #svg-1 {
    stroke: black;
}

.light-theme #top-bar-button-2 {
    border-color: black !important;
}

.light-theme #svg-2 {
    stroke: black;
}

.dark-theme .list-links:hover {
    color: rgb(239, 239, 239);
}

.thememenu {
    display: none;
    position: absolute;
    border: 1px solid #515151;
    background: #f2f2f2;
    color: #121212;
    padding: 5px 0px;
    margin-top: 3px;
    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
    border-radius: 4px;
}

.dark-theme .thememenu {
    background: #121212;
    color: rgb(239, 239, 239);
}

.thememenu-item {
    padding: 5px 20px;
    cursor: pointer;
}

.thememenu-item:hover {
    background: #b7b7b7;
}

.dark-theme .thememenu-item:hover {
    background: #4e4e4e;
}

.mobile-menu {
    display: none;
    width: 100vw;
    height: 100vh;
    background-color: #ffffff;
    position: absolute;
    top: 0;
    left: 0;
    list-style: none;
}

.dark-theme .mobile-menu {
    background-color: rgb(24, 24, 27) !important;
    color: white;
}

.light-theme .cross-button {
    color: black !important;
}

.mobile-menu-nav {
    list-style: none;
    height: 50vh !important;
}

.mobile-menu-nav-item {
    padding: 2rem 0rem;
}

.mobile-menu-nav-link {
    padding: 1.5rem 0rem;
}

.main-cont {
    height: 80vh;
}

.main-heading {
    font-size: 3.5rem !important;
    font-weight: 800 !important;
}

.light-theme .main-heading {
    color: black !important;
}

.dark-theme .main-heading {
    color: white !important;
}

.img-socials {
    width: 30px;
    height: 30px;
}

.about-img {
    transform: rotate(2deg);
    filter: grayscale(1);
    border-radius: 5px;
    width: 200px;
    height: 300px;
}

.about-heading {
    line-height: 90%;
    font-size: 3rem;

}

.about-img:hover {
    transform: rotate(0deg);
    filter: grayscale(0);
}

/* utilites */

.flex-row {
    flex-direction: row;
}

.flex-col {
    flex-direction: column;
}

.hide {
    display: none;
}

@media only screen and (min-width: 640px) {
    .hidemenu {
        display: none;
    }
}

@media only screen and (min-width: 0px) and (max-width: 640px) {
    .hidenav {
        display: none;
    }

    .block {
        display: block;
    }

    .socials-cont-col {
        display: flex;
        justify-content: center;
        align-items: flex-end;
    }

    .about-main {
        display: flex;
        flex-direction: column;
        justify-content: center;
    }
}

